transaction completed by buyer
