# main.go
@@ -38,6 +38,7 @@ func main() {
 	api.HandleFunc("/transactions", transactions.GetTransactionsHandler).Methods("GET")
 	api.HandleFunc("/transactions/{id}", transactions.GetTransactionHandler).Methods("GET")
 	api.HandleFunc("/transactions/{id}/fulfill", transactions.FulfillTransactionHandler).Methods("PUT")
+	api.HandleFunc("/transactions/{id}/confirm", transactions.ConfirmDeliveryHandler).Methods("PUT")
 
 	// Setup CORS
 	c := cors.New(cors.Options{
